add 'chrono step' to liberate target movement speed from frame time lock

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Crosshair.h" />
+    <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="Target.h" />
     <ClInclude Include="ChiliException.h" />
     <ClInclude Include="ChiliWin.h" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="Crosshair.cpp" />
     <ClCompile Include="DXErr.cpp" />
+    <ClCompile Include="FrameTimer.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Keyboard.cpp" />
